Movie Ranking project

--- a/2.4 Movie Ranking Project/index.html
+++ b/2.4 Movie Ranking Project/index.html
@@ -1,10 +1,9 @@
-<h1>The Best Mobvies According to Angela </h1>
-<h2>My top 3 movies af all times</h2>
-
+<h1>The Best Movies According to Angela</h1>
+<h2>My top 3 movies of all times.</h2>
 <hr />
 <h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful firm. Really artistic</p>
+<p>This is my favourite anime. I love the beautiful images</p>
+<h2>Ex Machina</h2>
+<p>Really cool Sci-fi movie.</p>
+<h2>Drive</h2>
+<p>Super beautiful film. Really artisti.c</p>
