--- a/3.2 Anchor Elements/index.html
+++ b/3.2 Anchor Elements/index.html
@@ -1,10 +1,32 @@
 <h1>My top 5 Favourite Websites</h1>
 <ol>
 <li>
-    <ahref="www.lulifiber.com">
-       </li>
-    Websites
+    <a href="www.lulifiber.com">
+        Product Hunt
+</li>
 </a>
 
+<li>
+    <a href="www.google.com">
+        Smash the Walls 
+</li>
+</a>
 
+<li>
+    <a href="www.Jumia.com">
+        Wordle 
+</li>
+</a>
+
+<li>
+    <a href="www.instagram.com">
+        Hacker Typer
+</li>
+</a>
+
+<li>
+    <a href="www.google.com">
+        Sterllarium
+</li>
+</a>
 </ol>
