updated fav webaite

--- a/3.2 Anchor Elements/index.html
+++ b/3.2 Anchor Elements/index.html
@@ -2,31 +2,31 @@
 <ol>
 <li>
     <a href="www.lulifiber.com">
-        Product Hunt
+        lulifiber
 </li>
 </a>
 
 <li>
     <a href="www.google.com">
-        Smash the Walls 
+       Google 
 </li>
 </a>
 
 <li>
     <a href="www.Jumia.com">
-        Wordle 
+        Jumia
 </li>
 </a>
 
 <li>
-    <a href="www.instagram.com">
-        Hacker Typer
+    <a href="www.vercel.com">
+        Vercel
 </li>
 </a>
 
 <li>
-    <a href="www.google.com">
-        Sterllarium
+    <a href="instagram.com">
+        Instagram
 </li>
 </a>
 </ol>
