--- a/4.3 HTML Porfolio Project/public/contact.html
+++ b/4.3 HTML Porfolio Project/public/contact.html
@@ -1,9 +1,8 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
+<p>Tel: +2348102716110</p>
+<p>Email: gbassey@gmail.com</p>
+<p>Address: Lagos, Nigeria </p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Lagos City<br />
+  Nigeria  <br />
 </p>
