--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -6,20 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+<h3><a href="http://127.0.0.1:5502/index.html"></a>Sign Up</h3>
+<img src="assets/images/sign up .png" alt="">
+<h3><a href ="http://127.0.0.1:5501/3.4%20Birthday%20Invite%20Project/index.html">Birthdayinvite</a></h3>
+<img src="assets/images/birthday-invite.png" alt="">
+<img src="assets/images/movie-ranking.png" alt="">
+
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
