--- a/5.1. Adding CSS/internal.html
+++ b/5.1. Adding CSS/internal.html
@@ -6,8 +6,15 @@
   <title>Internal</title>
 </head>
 
+
+<style>
+  h1 {
+    color: red;
+  }
+</style>
+
 <body>
-<h1>Style Me in Red!</h1>
+  <h1> Style Me in Red!</h1>
 </body>
 
 </html>
