--- a/5.1. Adding CSS/external.html
+++ b/5.1. Adding CSS/external.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>External</title>
-</head>
+  <link rel="stylesheet" href="./style.css" /></head>
+  
 <body>
   <h1>Style Me in Green</h1>
 </body>
